Fix profile saving and empty watch state
